--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-charts": "^4.0.1",
     "react-icons-kit": "^2.0.0",
     "react-router-dom": "^6.18.0",
     "reactive-button": "^1.3.15",
-    "sweetalert2": "^11.10.0",
+    "sweetalert2": "^11.6.13",
     "sweetalert2-react-content": "^5.0.7",
     "tabler-icons-react": "^1.56.0"
   },
